[gd_scene load_steps=19 format=2]

[ext_resource path="res://Actors/Characters/Enemy/Boss1.gd" type="Script" id=1]
[ext_resource path="res://assets/art/explosion3.png" type="Texture" id=2]
[ext_resource path="res://assets/art/boss/boss1frame2.bmp" type="Texture" id=3]
[ext_resource path="res://assets/art/boss/boss1frame1.bmp" type="Texture" id=4]
[ext_resource path="res://assets/art/boss/boss1frame3.bmp" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 91, 91 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 91, 0, 91, 91 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 182, 0, 91, 91 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 273, 0, 91, 91 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 364, 0, 91, 91 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 91, 91, 91 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 91, 91, 91, 91 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 182, 91, 91, 91 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 273, 91, 91, 91 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 364, 91, 91, 91 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 3 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": false,
"name": "die",
"speed": 20.0
} ]

[sub_resource type="CapsuleShape2D" id=12]
radius = 51.0
height = 80.0

[sub_resource type="CapsuleShape2D" id=13]
radius = 51.0
height = 80.0

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 11 )
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 12 )

[node name="RunTimer" type="Timer" parent="."]
autostart = true

[node name="JumpTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource( 13 )

[node name="SpreadTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="HomingTimer" type="Timer" parent="."]
autostart = true

[node name="ShootTimer" type="Timer" parent="."]
[connection signal="timeout" from="RunTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="JumpTimer" to="." method="_on_JumpTimer_timeout"]
[connection signal="timeout" from="SpreadTimer" to="." method="_on_SpreadTimer_timeout"]
[connection signal="timeout" from="HomingTimer" to="." method="_on_HomingTimer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
